# RustActixGQL_Template

./: Cargo.toml
src/: main.rs
src/schemas/: mod.rs  ping.rs  schema.rs
